# HTTP-Game-handler

./: .gitignore  EngineHandler.py  HttpSocketHandler.py  LICENSE  README.md  ServerState.py  SessionManager.py  ThreadedHttpServer.py  config.py  constants.py  exceptions.py  server.ini  server.py
Python server handler/: basic_server.py  jsp.txt
Python_server/: HttpSocketHandler.py  ThreadedHttpServer.py  basic_server.py  test.db
chess_backend/: Cargo.toml  chess.lua
chess_backend/chess_rust_helper/: Cargo.toml
chess_backend/lua/: tests.lua  utils.lua
chess_backend/src/: main.rs
frontend/: game.html  home.html  login.html  profile.html  register.html  stats.html
frontend/templates/: game.html  home.html  login.html  register.html  stats.html
python/: HttpSocketHandler.py  ThreadedHttpServer.py  server.ini  server.py
python/auth/: __init__.py  session.py
python/backend/: Cargo.toml
python/backend/src/: main.rs
python/backend/src/parsers/: fen_parser.rs  mod.rs  parse_error.rs  parse_output.rs  pgn_parser.rs
python/backend/src/validation/: board_validation.rs  possible_moves.rs
python/backend/src/validation/pieces/: bishop.rs  king.rs  knight.rs  pawn.rs  queen.rs  rook.rs
python/database/: __init__.py  connection.py  game_operations.py  user_operations.py
python/frontend/: game.html  home.html  profile.html  register.html  stats.html
python/game/: __init__.py  instance_handler.py  matchmaking.py
python/utils/: CompressionPool.py  EngineHandler.py  SanitizeOrValidate.py  ServerState.py  SessionManager.py  config.py  constants.py  (+1 more)
(+76 files in other folders)
