[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1.10"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"

[[bin]]
name = "chess_rust_helper"
path = "src/main.rs"

# OPTIMIZATION: Release profile settings
[profile.release]
opt-level = 3           # Maximum optimizations
lto = "thin"            # Link-time optimization (thin is faster than "fat")
codegen-units = 1       # Better optimization (slower compile, faster runtime)
strip = true            # Remove debug symbols - smaller binary
panic = 'abort'         # Smaller binary, no unwinding

# OPTIMIZATION: Some optimization even in dev builds for faster testing
[profile.dev]
opt-level = 1           # Basic optimizations in debug mode

# For benchmarking
[profile.bench]
inherits = "release"
debug = true            # Keep debug info for profiling

# Optional: Add criterion for benchmarking
# Uncomment to enable benchmarks:
# [dev-dependencies]
# criterion = "0.5"
#
# [[bench]]
# name = "move_gen"
# harness = false
